mobile alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -1424,7 +1424,9 @@ ul.portfolioContainer li:hover span.hoverBox .linKed {
     left: 0px;
     top: 0px;
   }
+}
 
+@media only screen and (max-width: 668px) {
   ul.portfolioContainer li img {
     margin-left: auto;
     margin-right: auto;
